--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,9 +1,177 @@
-.App{
-    text-align: center;
+/*
+COLORS:
+
+Light green: #7ed56f
+Medium green: #55c57a
+Dark green: #28b485
+
+*/
+
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Lato";
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.7;
+  color:#777;
+  padding:30px;
+}
+
+.header{
+  height:95vh;
+  background-image: linear-gradient(
+    to right bottom,
+    #7ed56faf,#28b4859c),
+    url("../../public/hero.jpg");
+  background-size:cover;
+  background-position: top;
+  position: relative;
+
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+}
+
+.logo-box{
+  position: absolute;
+  top: 40px;
+  left: 40px;
+  
+}
+
+.logo{
+  height: 35px;
+  
+
+}
+.logo:hover{
+  animation: rotateLogo infinite 1s linear;
+}
+
+.text-box{
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.heading-primary{
+  color: #fff;
+  text-transform: uppercase;
+  backface-visibility: hidden;
+  margin-bottom: 50px;
+}
+
+.heading-primary-main{
+  display: block;
+  font-size: 60px;
+  font-weight: 400;
+  letter-spacing: 35px;
+
+  animation-name: moveInLeft;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
+}
+
+.heading-primary-sub{
+  display: block;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 31px;
+
+  animation-name: moveInRight;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
+
+}
+
+.btn:link,
+.btn:visited{
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 15px 40px;
+  display: inline-block;
+  border-radius: 50px;
+  transition: all .2s;
+  position: relative;
+
+
+}
+
+.btn:hover{
+  transform:translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.205);
+}
+
+.btn:active{
+  transform: translateY(-1px);
+  box-shadow: 0 5px 1px rgba(0, 0, 0, 0.205);
+}
+
+.btn-white{
+  background-color: #fff;
+  color:#777;
+
 }
 
 
-@keyframes App{
+.btn::after{
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.btn-white::after{
+  background-color: #fff;
+}
+.btn:hover::after{
+  transform: scale(2);
+}
+
+
+@keyframes moveInLeft {
+  0%{
+    opacity:0;
+    transform:translateX(-100px);
+  }
+
+  80%{
+    transform: translate(10px);
+  }
+
+  100%{
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+@keyframes moveInRight {
+  0%{
+    opacity:0;
+    transform:translateX(100px);
+  }
+
+  80%{
+    transform: translate(-10px);
+  }
+
+  100%{
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+@keyframes rotateLogo {
   from {
     transform: rotate(0deg);
   }
